fix z-index for menu mobile

--- a/resources/assets/scss/blocks/pages/_newsletter.scss
+++ b/resources/assets/scss/blocks/pages/_newsletter.scss
@@ -1,7 +1,7 @@
 .goza-box-featured-grid-block{
     &.goza-box-featured-newsletter{
         margin-bottom: -160px;
-        z-index: 999;
+        z-index: 9;
         position: relative;
     }
 }
