--- a/resources/assets/scss/layouts/_menu_mobile.scss
+++ b/resources/assets/scss/layouts/_menu_mobile.scss
@@ -4,7 +4,7 @@
     top: 0;
     visibility: hidden;
     opacity: 0;
-    z-index: 100;
+    z-index: 999;
     width: 100%;
     height: 100%;
     background: rgba(1, 1, 1, .3);
@@ -30,7 +30,6 @@
 
     .off-canvas-menu-closed {
         position: absolute;
-        display: block;
         z-index: 5;
         right: 10px;
         top: 10px;
@@ -69,7 +68,7 @@
 
         .mobile-menu {
             margin-top: 50px;
-
+            padding-bottom: 60px;
             ul {
                 padding: 0;
                 margin: 0;
